--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -43,11 +43,10 @@ Metrics/AbcSize:
 # ExcludedMethods: refine
 Metrics/BlockLength:
   Max: 67
+  Exclude:
+    - 'spec/**'
 
-# Offense count: 5
-# Configuration parameters: CountComments, ExcludedMethods.
-Metrics/MethodLength:
-  Max: 14
+
 
 # Offense count: 1
 # Configuration parameters: ExpectMatchingDefinition, CheckDefinitionPathHierarchy, Regex, IgnoreExecutableScripts, AllowedAcronyms.
