add deploy process to circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,3 +55,15 @@ jobs:
       - store_artifacts:
           path: /tmp/test-results
           destination: test-results
+
+      - add_ssh_keys:
+          fingerprints:
+            - "97:35:37:f9:50:3f:19:91:04:16:7c:78:81:c1:16:52"
+
+      - deploy:
+          name: Capistrano deploy
+          command: |
+            if [ "${CIRCLE_BRANCH}" != "master" ]; then
+              exit 0
+            fi
+            bundle exec cap production deploy
