--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,13 +59,16 @@ jobs:
 
 
   deploy:
+    machine:
+      image: circleci/classic:edge
     steps:
       - checkout
       - add_ssh_keys:
         fingerprints:
           - "97:35:37:f9:50:3f:19:91:04:16:7c:78:81:c1:16:52"
-      - command:
-          bundle exec cap production deploy
+      - deploy:
+          name: Capistrano_deploy
+          command: bundle exec cap production deploy
 
 workflows:
   version: 2
