--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,19 @@
-version: 2
-jobs:
-  build:
+version: 2.1
+
+executors:
+  default:
+    working_directory: ~/repo
     docker:
       - image: circleci/ruby:2.5.1-node-browsers
         environment:
           - BUNDLER_VERSION: 2.1.4
-          - RAILS_ENV: 'test'
       - image: circleci/mysql:5.7
         environment:
           - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
           - MYSQL_ROOT_HOST: '%'
 
-    working_directory: ~/repo
-
+commands:
+  setup:
     steps:
       - checkout
       - restore_cache:
@@ -28,11 +29,19 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-
+  
       - run: mv config/database.yml.ci config/database.yml 
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
-
+  
+jobs:
+  build:
+    executor: default
+    environment:
+      RAILS_ENV: test
+    steps:
+      - checkout
+      - setup
       - run:
           name: Rubocop
           command: bundle exec rubocop
@@ -57,19 +66,18 @@ jobs:
           destination: test-results
 
   deploy:
-    machine:
-      image: circleci/classic:edge
+    executor: default
     steps:
       - checkout
+      - setup
       - add_ssh_keys:
           fingerprints:
             - "97:35:37:f9:50:3f:19:91:04:16:7c:78:81:c1:16:52"
       - deploy:
-          name: Capistrano_deploy
+          name: Capistrano deploy
           command: bundle exec cap production deploy
 
 workflows:
-  version: 2
   build_and_deploy:
     jobs:
       - build
